package _21224bhifPos1CsesiereiBlocketWiki.Domain;

import javax.persistence.Embeddable;

/*
 * @Author : Cse19455@spengergasse.at
 *
 * Mobtypes for further Mob specification
 */

@Embeddable
public enum MobType {
    FRIENDLY,
    AGGRESSIVE,
    PASSIVE
}
