package _21224bhifPos1CsesiereiBlocketWiki.Domain;

import javax.persistence.Embeddable;
import javax.persistence.Entity;

/*
 * @Author : Cse19455@spengergasse.at
 *
 * Permissions
 */

@Embeddable
public enum Permission {
    READ,
    WRITE
}
