package _21224bhifPos1CsesiereiBlocketWiki.Domain;

import javax.persistence.Embeddable;

/*
 * @Author : Cse19455@spengergasse.at
 *
 * Available Weaponclasses in the Game
 */

@Embeddable
public enum WeaponClass {
    MELEE,
    RANGED,
    MAGE,
    BENDER
}
